src/test/test-models/bad/err-non-int-dims.stan
transformed data {
  real y[2,3];
  real x;
  x <- y[1,2.3];
}
model {
}
